<resources>
    <string name="app_name">ListApp</string>
    <string name="welcome_rus">Добро пожаловать!</string>
    <string name="email_rus">Почта</string>
    <string name="forget_password_rus">Забыли пароль?</string>
    <string name="password_rus">Пароль</string>
    <string name="login_rus">Войти</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account_rus">Создать аккаунт</string>
    <string name="registration_rus">Регистрация</string>
    <string name="username_rus">Никнейм</string>
</resources>